--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Nextflow
+work/
+.nextflow.log*
+.nextflow
+*.log
+
+# Pycharm
+idea/
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
