Fixed Nextflow Schema version (v.2.3.0) and parameter validation/logging/help message

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,5 +13,12 @@ process {
 }
 
 plugins { 
-    id 'nf-schema@2.0.0' 
+    id 'nf-schema@2.3.0' 
+}
+
+validation {
+    help {
+        enabled = true
+        command = "nextflow run methyl-array_qc.nf --params-file test_params_config.json"
+    }
 }
