--- a/nextflow.config
+++ b/nextflow.config
@@ -22,3 +22,15 @@ validation {
         command = "nextflow run methyl-array_qc.nf --params-file test_params_config.json"
     }
 }
+
+params {
+    cpus = 1
+    collapse_prefix = "FALSE"
+    p_threshold = 0.2
+    s_threshold = 0.2
+    n_cpgs_beta_distr = 10000
+    top_nan_per_probe_cpgs = 1000
+    perc_pca_cpgs = 10
+    pca_number_of_components = 10
+    pca_columns = 'Sentrix_ID,Sentrix_Position'
+}
