PCA process: replaced PCA 2D plot with scatter matrix for adjustable number of components, as suggested in review for PR #4

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,4 +33,5 @@ params {
     perc_pca_cpgs = 10
     pca_number_of_components = 10
     pca_columns = 'Sentrix_ID,Sentrix_Position'
+    pca_matrix_PC_count = 2
 }
