Splitted R Docker container into two containers for potential faster re-build: 1) R_sesame: for SeSAME R package and its dependencies 2) R_other: for other R packages and their dependencies

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,11 @@ docker {
 }
 
 process {
-    withLabel: "r" {
+    withLabel: "r_other" {
+        container = "methyl-array-qc-r-other"
+    }
+
+    withLabel: "r_sesame" {
         container = "janbinkowski96/methyl-array-qc-r"
     }
 
