Added epigenetic age inference (currently: results only exported to CSV)

--- a/images/R_other/Dockerfile
+++ b/images/R_other/Dockerfile
@@ -1,7 +1,7 @@
 FROM r-base:4.4.1
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install necessary system dependencies for installing 'meffonym'
+# Install necessary system dependencies for installing 'dnaMethyAge' and related packages
 RUN apt-get update && apt-get install -y \
     curl \
     libcurl4-openssl-dev \
@@ -10,11 +10,23 @@ RUN apt-get update && apt-get install -y \
     gnupg2 \
     lsb-release \
     sudo \
+    libgit2-dev \
+    libbz2-dev \
+    liblzma-dev \
+    zlib1g-dev \
+    libxt-dev \
+    libpng-dev \
+    libtiff-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    libfontconfig1-dev \
+    build-essential \
     && apt-get clean
 
-# Install 'meffonym' R package using remotes
-RUN R -e "install.packages('remotes')" \
-    && R -e "remotes::install_github('perishky/meffonym')" \
+# Install necessary R packages
+RUN R -e "install.packages(c('remotes', 'arrow', 'dplyr', 'tidyr', 'data.table', 'BiocManager'))" \
+    && R -e "BiocManager::install('preprocessCore', configure.args = c(preprocessCore = '--disable-threading'), force= TRUE, update=TRUE, type = 'source')" \
+    && R -e "remotes::install_github('yiluyucheng/dnaMethyAge', dependencies = TRUE)" \
     && apt-get clean
 
 # Default command to run R
