--- a/nextflow.config
+++ b/nextflow.config
@@ -38,4 +38,6 @@ params {
     pca_number_of_components = 10
     pca_columns = 'Sentrix_ID,Sentrix_Position'
     pca_matrix_PC_count = 2
+    infer_epi_age = true
+    epi_clocks = "HannumG2013,HorvathS2013,HorvathS2018,LevineM2018,DunedinPACE,PCHorvathS2013,PCHannumG2013,PCHorvathS2018,PCPhenoAge,PCGrimAge"
 }
