--- a/nextflow.config
+++ b/nextflow.config
@@ -39,5 +39,5 @@ params {
     pca_columns = 'Sentrix_ID,Sentrix_Position'
     pca_matrix_PC_count = 2
     infer_epi_age = true
-    epi_clocks = "HannumG2013,HorvathS2013,HorvathS2018,LevineM2018,DunedinPACE,PCHorvathS2013,PCHannumG2013,PCHorvathS2018,PCPhenoAge,PCGrimAge"
+    epi_clocks = 'HannumG2013,HorvathS2013'
 }
