nextflow.config: Updated name for r_other container & default parameters for PCA

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ docker {
 
 process {
     withLabel: "r_other" {
-        container = "methyl-array-qc-r-other"
+        container = "janbinkowski96/methyl-array-qc-r-other"
     }
 
     withLabel: "r_sesame" {
@@ -35,9 +35,9 @@ params {
     n_cpgs_beta_distr = 10000
     nan_per_probe_n_cpgs = 1000
     perc_pca_cpgs = 10
-    pca_number_of_components = 10
+    pca_number_of_components = 5
     pca_columns = 'Sentrix_ID,Sentrix_Position'
-    pca_matrix_PC_count = 2
+    pca_matrix_PC_count = 5
     infer_epi_age = true
     epi_clocks = 'HannumG2013,HorvathS2013'
 }
