--- a/images/R_other/Dockerfile
+++ b/images/R_other/Dockerfile
@@ -21,6 +21,7 @@ RUN apt-get update && apt-get install -y \
     libfreetype6-dev \
     libfontconfig1-dev \
     build-essential \
+    procps \
     && apt-get clean
 
 # Install necessary R packages
