--- a/images/R_sesame/Dockerfile
+++ b/images/R_sesame/Dockerfile
@@ -6,7 +6,7 @@ RUN apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev \
         libfontconfig1-dev libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev \
         libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev \
         libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev \
-        wget libbz2-dev libssl-dev libxml2-dev pandoc openjdk-17-jdk -y && \
+        wget libbz2-dev libssl-dev libxml2-dev pandoc openjdk-17-jdk procps -y && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
