--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,7 @@ validation {
 
 params {
     cpus = -1
-    collapse_prefix = "FALSE"
+    collapse_prefix = false
     p_threshold = 0.2
     s_threshold = 0.2
     n_cpgs_beta_distr = 10000
