Nextflow config: updated execution report and diagram settings

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,3 +41,11 @@ params {
     infer_epi_age = true
     epi_clocks = 'HannumG2013,HorvathS2013'
 }
+
+report {
+    overwrite = true
+}
+
+dag {
+    overwrite = true
+}
