Added def params to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,14 +30,20 @@ validation {
 params {
     cpus = -1
     collapse_prefix = false
+    collapse_prefix_method = "mean"
     p_threshold = 0.2
     s_threshold = 0.2
+    prep_code = "QCDPB"
+    imputer_type = "knn"
+    contamination = "auto"
     n_cpgs_beta_distr = 10000
     nan_per_probe_n_cpgs = 1000
     perc_pca_cpgs = 10
+    contamination = 'auto' // either auto or float (0, 0.5], for more info see https://scikit-learn.org/stable/modules/outlier_detection.html#
     pca_number_of_components = 5
     pca_columns = 'Sentrix_ID,Sentrix_Position'
     pca_matrix_PC_count = 5
+    infer_sex = true
     infer_epi_age = true
     epi_clocks = 'HannumG2013,HorvathS2013'
 }
