Bug fix: fixed the installation of dnaMethyAge dependencies on Docker machine (& renamed the machine and its label - new label: R_clock)

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,8 +3,8 @@ docker {
 }
 
 process {
-    withLabel: "r_other" {
-        container = "janbinkowski96/methyl-array-qc-r-other"
+    withLabel: "r_clock" {
+        container = "janbinkowski96/methyl-array-qc-r-clock"
     }
 
     withLabel: "r_sesame" {
